third_party/move/move-compiler-v2/tests/cyclic-instantiation-checker/v1-tests/mutually_recursive_type_con.exp

Diagnostics:
error: cyclic type instantiation: a cycle of recursive uses causes a type to grow without bound
  ┌─ tests/cyclic-instantiation-checker/v1-tests/mutually_recursive_type_con.move:7:9
  │
7 │     fun f<T>() {
  │         ^
  │
  = `f<T>` uses `g<S<T>>` at tests/cyclic-instantiation-checker/v1-tests/mutually_recursive_type_con.move:8
  = `g<S<T>>` uses `f<S<T>>` at tests/cyclic-instantiation-checker/v1-tests/mutually_recursive_type_con.move:12

error: cyclic type instantiation: a cycle of recursive uses causes a type to grow without bound
   ┌─ tests/cyclic-instantiation-checker/v1-tests/mutually_recursive_type_con.move:11:9
   │
11 │     fun g<T>() {
   │         ^
   │
   = `g<T>` uses `f<T>` at tests/cyclic-instantiation-checker/v1-tests/mutually_recursive_type_con.move:12
   = `f<T>` uses `g<S<T>>` at tests/cyclic-instantiation-checker/v1-tests/mutually_recursive_type_con.move:8
